--- a/design/design-specification.html
+++ b/design/design-specification.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>债券管理系统 - 设计规范</title>
+    <title>设计规范</title>
     <style>
         * {
             margin: 0;
